# MyOwnCompiler

./: .gitignore  README.md  codegen_test  lexer  lexer_test  parser  parser_test  semantic_test
cpp-compiler/: CMakeLists.txt
cpp-compiler/src/: main.cpp  vm.cpp  vm.h
cpp-compiler/src/assembler/: assembler.cpp  assembler.h
cpp-compiler/src/codegen/: codegen.cpp  codegen.h  opcode.h
cpp-compiler/src/common/: ast.cpp  ast.h  token.cpp  token.h
cpp-compiler/src/lexer/: lexer.cpp  lexer.h
cpp-compiler/src/parser/: parser.cpp  parser.h
cpp-compiler/src/semantic/: semantic.cpp  semantic.h
src/: compiler_sc.cpp  main~HEAD
src/codegen/: codegen  codegen.cpp  codegen.h
src/lexer/: lexer.cpp  lexer.h
src/main/: main.cpp
src/parser/: parser.cpp  parser.h  tempCodeRunnerFile.cpp
src/semantic/: semantic  semantic.cpp  semantic.h
test_programs/: text_input.txt
